# trident_bot

./: .gitignore  Cargo.toml
src/: commands.rs  main.rs  math.rs  phantoms.rs  thunder.rs
