[package]
name = "trident_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rspotify = { version = "0.11.7", features = ["env-file", "cli"] }
sqlite = "0.31.0"
tokio = { version =  "1.29.1", features = ["full"] }
twitch-irc = "5.0.0"
